data/derived/comb/progs/unify/prog1900.ml.out
Characters 117-175:
  | h::t -> ( pos + 1,  bigAdd (mulByDigit (10 ** pos * h) l2) total ) in
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
